<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:fontFamily="casual"
        android:text="@string/enter_the_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/collegeNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:text="@string/entercollegename"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/input_hint_text"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/input_hint_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <EditText
        android:id="@+id/collegeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/iiit_raipur"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/iiit_raipur"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collegeNameText" />

    <Button
        android:id="@+id/wishBirthdayButton"
        android:layout_width="177dp"
        android:layout_height="61dp"
        android:layout_marginTop="64dp"
        android:onClick="wishBirthdayButtonClick"
        android:padding="12dp"
        android:text="@string/wishbirthday"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collegeName"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/wishGraduationButton"
        android:layout_width="202dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:onClick="wishGraduationButtonclick"
        android:padding="10dp"
        android:text="@string/wishgrduation"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishBirthdayButton"
        app:layout_constraintVertical_bias="0.088"
        tools:ignore="UsingOnClickInXml" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageToBeLoadedIdMain.xml"-->
<!--        android:layout_width="130dp"-->
<!--        android:layout_height="130dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/ic_launcher_background"-->
<!--        tools:srcCompat="@tools:sample/avatars" />-->

<!--    <Button-->
<!--        android:id="@+id/LoadImageButtonInMain"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:backgroundTint="@android:color/holo_blue_dark"-->
<!--        android:onClick="onClickingLoadImageInMainActivity"-->
<!--        android:padding="12dp"-->
<!--        android:text="LoadImage"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/imageToBeLoadedIdMain.xml"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->


</androidx.constraintlayout.widget.ConstraintLayout>